--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "dayjs": "^1.8.8",
     "iview": "^3.2.2",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
